include/altdss/capi/dss.h

    /*! 
    Current limit per phase for the IBR when operating in GFM mode.
    */
    ALTDSS_CAPI_DLL double Storages_Get_AmpLimit(void);
    /*! 
    Current limit per phase for the IBR when operating in GFM mode.
    */
    ALTDSS_CAPI_DLL void Storages_Set_AmpLimit(double Value);
    /*! 
    Use it for fine tuning the current limiter when active.
    */
    ALTDSS_CAPI_DLL double Storages_Get_AmpLimitGain(void);
    /*! 
    Use it for fine tuning the current limiter when active.
    */
    ALTDSS_CAPI_DLL void Storages_Set_AmpLimitGain(double Value);
    /*! 
    Dispatch trigger value for charging the Storage.
    */
    ALTDSS_CAPI_DLL double Storages_Get_ChargeTrigger(void);
    /*! 
    Dispatch trigger value for charging the Storage.
    */
    ALTDSS_CAPI_DLL void Storages_Set_ChargeTrigger(double Value);
    /*! 
    Control mode for the inverter. It can be one of {GFM = 1 | GFL* = 0}.
    */
    ALTDSS_CAPI_DLL int32_t Storages_Get_ControlMode(void);
    /*! 
    Control mode for the inverter. It can be one of {GFM = 1 | GFL* = 0}.
    */
    ALTDSS_CAPI_DLL void Storages_Set_ControlMode(int32_t Value);
    /*! 
    Dispatch trigger value for discharging the Storage.
    */
    ALTDSS_CAPI_DLL double Storages_Get_DischargeTrigger(void);
    /*! 
    Dispatch trigger value for discharging the Storage.
    */
    ALTDSS_CAPI_DLL void Storages_Set_DischargeTrigger(double Value);
    /*! 
    Percentage efficiency for CHARGING the Storage element.
    */
    ALTDSS_CAPI_DLL double Storages_Get_EffCharge(void);
    /*! 
    Percentage efficiency for CHARGING the Storage element.
    */
    ALTDSS_CAPI_DLL void Storages_Set_EffCharge(double Value);
    /*! 
    Percentage efficiency for DISCHARGING the Storage element.
    */
    ALTDSS_CAPI_DLL double Storages_Get_EffDischarge(void);
    /*! 
    Percentage efficiency for DISCHARGING the Storage element.
    */
    ALTDSS_CAPI_DLL void Storages_Set_EffDischarge(double Value);
    /*! 
    Proportional gain for the PI controller within the inverter.
    Use it to modify the controller response in dynamics simulation mode.
    */
    ALTDSS_CAPI_DLL double Storages_Get_Kp(void);
    /*! 
    Proportional gain for the PI controller within the inverter.
    Use it to modify the controller response in dynamics simulation mode.
    */
    ALTDSS_CAPI_DLL void Storages_Set_Kp(double Value);
    /*! 
    Nominal rated (1.0 per unit) voltage, kV, for Storage element.
    */
    ALTDSS_CAPI_DLL double Storages_Get_kV(void);
    /*! 
    Nominal rated (1.0 per unit) voltage, kV, for Storage element.
    */
    ALTDSS_CAPI_DLL void Storages_Set_kV(double Value);
    /*! 
    Inverter nameplate capability (in kVA). Used as the base for Dynamics mode and Harmonics mode values.
    */
    ALTDSS_CAPI_DLL double Storages_Get_kVA(void);
    /*! 
    Inverter nameplate capability (in kVA). Used as the base for Dynamics mode and Harmonics mode values.
    */
    ALTDSS_CAPI_DLL void Storages_Set_kVA(double Value);
    /*! 
    Get/set the requested kvar value. Final kvar is subjected to the inverter ratings. Sets inverter to operate in constant kvar mode.

    **Note:** reading the DSS property `kvar` returns the adjusted value, while this returns the original input value.
    */
    ALTDSS_CAPI_DLL double Storages_Get_kvar(void);
    /*! 
    Get/set the requested kvar value. Final kvar is subjected to the inverter ratings. Sets inverter to operate in constant kvar mode.

    **Note:** reading the DSS property `kvar` returns the adjusted value, while this returns the original input value.
    */
    ALTDSS_CAPI_DLL void Storages_Set_kvar(double Value);
    /*! 
    Rated voltage (kV) at the input of the inverter while the storage is discharging
    */
    ALTDSS_CAPI_DLL double Storages_Get_kVDC(void);
    /*! 
    Get/set the requested kW value. Final kW is subjected to the inverter ratings.
    */
    ALTDSS_CAPI_DLL double Storages_Get_kW(void);
    /*! 
    Rated Storage capacity in kWh.
    */
    ALTDSS_CAPI_DLL double Storages_Get_kWhRated(void);
    /*! 
    kW rating of power output. Base for Loadshapes when DispMode=Follow. Sets kVA property if it has not been specified yet.
    */
    ALTDSS_CAPI_DLL double Storages_Get_kWRated(void);
    /*! 
    Limits current magnitude to Vminpu value for both 1-phase and 3-phase Storage similar to Generator Model 7.
    For 3-phase, limits the positive-sequence current but not the negative-sequence."
    */
    ALTDSS_CAPI_DLL uint16_t Storages_Get_LimitCurrent(void);
    /*! 
    Get/set the requested PF value.
    */
    ALTDSS_CAPI_DLL double Storages_Get_PF(void);
    /*! 
    Tolerance (%) for the closed loop controller of the inverter
    */
    ALTDSS_CAPI_DLL double Storages_Get_PITol(void);
    /*! 
    (Read only) Indicates whether the inverter entered (Yes) or not (No) into Safe Mode.
    */
    ALTDSS_CAPI_DLL int32_t Storages_Get_SafeMode(void);
    /*! 
    Indicates the voltage level (%) respect to the base voltage level for which the Inverter will operate.
    */
    ALTDSS_CAPI_DLL double Storages_Get_SafeVoltage(void);
    /*! 
    Time of day in fractional hours (0230 = 2.5) at which Storage element will automatically go into charge state.
    */
    ALTDSS_CAPI_DLL double Storages_Get_TimeChargeTrig(void);
    /*! 
    Indicates if the reactive power generation/absorption does not respect the inverter status
    */
    ALTDSS_CAPI_DLL int32_t Storages_Get_VarFollowInverter(void);
    ALTDSS_CAPI_DLL void* Storages_Get_Pointer(void);