src/CAPI/CAPI_Storages.pas


    if (Value <> STORE_CHARGING) and 
       (Value <> STORE_IDLING) and
       (Value <> STORE_DISCHARGING) then
    begin
        DoSimpleMsg(DSSPrime, 'Invalid Storage state: "%d".', [Value], 656568);
    end;
    elem.SetStorageState(Value);
end;
//------------------------------------------------------------------------------
function Storages_Get_Pointer(): Pointer; CDECL;
begin
    Result := NIL;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.StorageElements.Active
end;
//------------------------------------------------------------------------------
function Storages_Get_AmpLimit(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.dynVars.ILimit;
end;
//------------------------------------------------------------------------------
function Storages_Get_AmpLimitGain(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.dynVars.VError;
end;
//------------------------------------------------------------------------------
function Storages_Get_ChargeTrigger(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.ChargeTrigger;
end;
//------------------------------------------------------------------------------
function Storages_Get_ControlMode(): Integer; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if elem.GFM_mode then
        Result := 1
end;
//------------------------------------------------------------------------------
function Storages_Get_DischargeTrigger(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.DischargeTrigger;
end;
//------------------------------------------------------------------------------
function Storages_Get_EffCharge(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.pctChargeEff;
end;
//------------------------------------------------------------------------------
function Storages_Get_EffDischarge(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.pctDischargeEff;
end;
//------------------------------------------------------------------------------
function Storages_Get_Kp(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.dynVars.kP * 1000;
end;
//------------------------------------------------------------------------------
function Storages_Get_kV(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.StorageVars.kVStorageBase;
end;
//------------------------------------------------------------------------------
function Storages_Get_kVA(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.StorageVars.FkVArating;
end;
//------------------------------------------------------------------------------
function Storages_Get_kvar(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.kvarRequested;
end;
//------------------------------------------------------------------------------
function Storages_Get_kVDC(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.dynVars.RatedVDC / 1000;
end;
//------------------------------------------------------------------------------
function Storages_Get_kW(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.kW;
end;
//------------------------------------------------------------------------------
function Storages_Get_kWhRated(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.StorageVars.kWhrating;
end;
//------------------------------------------------------------------------------
function Storages_Get_kWRated(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.StorageVars.kWrating;
end;
//------------------------------------------------------------------------------
function Storages_Get_LimitCurrent(): TAPIBoolean; CDECL;
var
    elem: TStorageObj;
begin
    Result := false;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if elem.CurrentLimited then
        Result := true;
end;
//------------------------------------------------------------------------------
function Storages_Get_PF(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.PFnominal;
end;
//------------------------------------------------------------------------------
function Storages_Get_PITol(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.dynVars.CtrlTol * 100;
end;
//------------------------------------------------------------------------------
function Storages_Get_SafeMode(): Integer; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if elem.dynVars.SafeMode then
        Result := 1;
end;
//------------------------------------------------------------------------------
function Storages_Get_SafeVoltage(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.dynVars.SMThreshold;
end;
//------------------------------------------------------------------------------
function Storages_Get_TimeChargeTrig(): Double; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.ChargeTime;
end;
//------------------------------------------------------------------------------
function Storages_Get_VarFollowInverter(): Integer; CDECL;
var
    elem: TStorageObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if elem.VarFollowInverter then
        Result := 1;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_AmpLimit(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.AmpLimit), Value, []);
        Exit;
    end;
    elem.dynVars.ILimit := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_AmpLimitGain(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.AmpLimitGain), Value, []);
        Exit;
    end;
    elem.dynVars.VError := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_ChargeTrigger(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.ChargeTrigger), Value, []);
        Exit;
    end;
    elem.ChargeTrigger := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_ControlMode(Value: Integer); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetInteger(ord(TStorageProp.ControlMode), Value, []);
        Exit;
    end;
    elem.GFM_mode := (Value <> 0);
end;
//------------------------------------------------------------------------------
procedure Storages_Set_DischargeTrigger(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.DischargeTrigger), Value, []);
        Exit;
    end;
    elem.DischargeTrigger := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_EffCharge(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.pctEffCharge), Value, []);
        Exit;
    end;
    elem.pctChargeEff := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_EffDischarge(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.pctEffDischarge), Value, []);
        Exit;
    end;
    elem.pctDischargeEff := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_Kp(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kP), Value, []);
        Exit;
    end;
    elem.dynVars.kP := Value / 1000;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_kV(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kV), Value, []);
        Exit;
    end;
    elem.ParentClass.SetObjDouble(elem, ord(TStorageProp.kV), Value, []);
end;
//------------------------------------------------------------------------------
procedure Storages_Set_kVA(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.SetDouble(ord(TStorageProp.kVA), Value, []);
        Exit;
    end;
    elem.StorageVars.FkVArating := Value;
end;
//------------------------------------------------------------------------------
procedure Storages_Set_kvar(Value: Double); CDECL;
var
    elem: TStorageObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
